Fixed problem with vertical alignment in Chrome for large screens

--- a/rendered_site/static/css/styles.css
+++ b/rendered_site/static/css/styles.css
@@ -65,18 +65,6 @@ body {
   content: ">";
 }
 
-.child {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.helper {
-  display: inline-block;
-  vertical-align: middle;
-  height: 100%;
-  width: 0;
-}
-
 .margin-top-shift {
   margin-top: -1px;
 }
